2007-08-12  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	applied patch from Yoshinori Yamakawa that adds code to get the
	monitor profile from Win32.

	* app/dialogs/preferences-dialog.c: enabled the toggle for
	"display-profile-from-gdk" on all systems.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpenumcombobox.h
	* libgimpwidgets/gimpenumlabel.h
	* libgimpwidgets/gimpenumstore.h
	* libgimpwidgets/gimpenumwidgets.h
	* libgimpwidgets/gimppropwidgets.h: added missing G_BEGIN_DECLS
	and G_END_DECLS.

2007-08-11  Michael Natterer  <mitch@gimp.org>

	* app/actions/tools-actions.c
	* app/actions/tools-commands.[ch]: removed unused rectangle tool
	actions.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: further work on the dialog.

2007-08-11  Michael Natterer  <mitch@gimp.org>

	* app/vectors/gimpstroke-new.[ch]: formatting.

2007-08-11  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am: renamed files:

	* app/plug-in/plug-in-error.[ch]: old names
	* app/plug-in/gimppluginerror.[ch]: new names

	* app/plug-in/plug-in-icc-profile.c
	* app/file/file-open.c: changed accordingly.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: factored out code to a utility function.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: don't open the destination profile twice.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c (lcms_icc_apply): if the image has a
	selection, save it, unset it and restore it after the conversion.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c
	* plug-ins/common/tiff-load.c
	* plug-ins/jpeg/jpeg-load.c: made the icc-profile undoable and
	persistent.
	
	* devel-docs/parasites.txt: document this.

	* plug-ins/common/lcms.c: made colorspace conversion undoable.
	
	* app/file/file-open.c: disable undo while doing the colorspace
	conversion on load.
