@@ -118,11 +118,11 @@ struct _GimpRectangleOptionsPrivate
   GtkWidget                  *fixed_width_entry;
   GtkWidget                  *fixed_height_entry;
 
-  GtkWidget                  *fixed_aspect_entry;
+  GtkWidget                  *fixed_aspect_hbox;
   GtkWidget                  *aspect_button_box;
   GtkListStore               *aspect_history;
 
-  GtkWidget                  *fixed_size_entry;
+  GtkWidget                  *fixed_size_hbox;
   GtkWidget                  *size_button_box;
   GtkListStore               *size_history;
 
